sort.basic.bubble.AlgBubbleSort1.scala.error
Compilation error:
AlgBubbleSort1:3: error: not found: value lenght
  for (i<- 0 to lenght -2) {
                ^