sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
  for (i<- 0 to lenght -2) {
    if (isSmaller(i,i+1)) {
      swap(i,i+1)
    }
  }
}